--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,4 +5,4 @@ sonar.sources=pets-ui/src, pets-core-services/src
 sonar.exclusions=pets-ui/src/utils/*, pets-ui/src/redux/*, pets-ui/**/*.test.tsx
 sonar.tests=pets-ui/src, pets-core-services/src
 sonar.test.inclusions=**/*.test.ts, **/*.test.tsx, cypress/e2e/**, **/*.spec.ts
-sonar.javascript.lcov.reportPaths=merged-output/merged-coverage.json
+sonar.javascript.lcov.reportPaths=pets-ui/coverage/lcov.info, pets-core-services/coverage/lcov.info
