--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -97,6 +97,17 @@ jobs:
 
       - name: Cypress run tests
         uses: cypress-io/github-action@v6
+        continue-on-error: true 
+        with:
+          install: false
+          working-directory: pets-ui/cypress
+          build: pnpm run build
+          start: pnpm run dev
+          browser: ${{ matrix.browser }}
+
+      - name: Retry if failed
+        if: failure()
+        uses: cypress-io/github-action@v6
         with:
           install: false
           working-directory: pets-ui/cypress
@@ -156,7 +167,6 @@ jobs:
         with:
           name: coverage-core-services
           path: pets-core-services/coverage/
-
 
   sonar-scan:
     runs-on: ubuntu-latest
