TBBETA-622: Resolve issues witth running watchers concurrently TBBETA-622: Seeding local DB on start

--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "generate:swagger-doc": "pnpm tsx src/swagger-generator/index.ts",
-    "preload:db": "node src/test/seed-data.ts seed",
+    "preload:db": "pnpm tsx src/test/seed-data.ts seed",
     "lint": "eslint .",
     "test": "vitest run --coverage"
   }
