--- a/pets-local-infra/package.json
+++ b/pets-local-infra/package.json
@@ -6,9 +6,9 @@
   },
   "scripts": {
     "watch": "tsc -w",
-    "build": "tsc",
     "cdk": "cdklocal",
     "build:core-services": "node esbuild.local.config.mjs",
+    "watch:core-services": "node esbuild.local.config.mjs --watch",
     "bootstrap": "cdklocal bootstrap",
     "deploy:local": "cdklocal deploy LocalInfrastructureStack --require-approval never"
   },
