TBBETA-622: Resolving noisy linting errors

--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "generate:swagger-doc": "pnpm tsx src/swagger-generator/index.ts",
     "preload:db": "pnpm tsx src/test/seed-data.ts seed",
-    "lint": "eslint .",
+    "lint": "eslint --quiet .",
     "test": "vitest run --coverage"
   }
 }
