TBBETA-623: Created necessary config for application lambda as well as handlers for saving travel, medical screening info

--- a/configs/.env.preprod
+++ b/configs/.env.preprod
@@ -5,4 +5,6 @@ CLINIC_SERVICE_DATABASE_NAME=pets-clinics
 APPLICANT_SERVICE_LAMBDA_NAME=applicant-service-lambda
 APPLICANT_SERVICE_LAMBDA_BUCKET=aw-pets-euw-preprod-s3-applicantservicelambda
 APPLICANT_SERVICE_DATABASE_NAME=applicant-details
+APPLICATION_SERVICE_LAMBDA_NAME=application-service-lambda
+APPLICATION_SERVICE_DATABASE_NAME=application-details
 API_GATEWAY_STAGE=api
