--- a/configs/.env
+++ b/configs/.env
@@ -7,6 +7,8 @@ CLINIC_SERVICE_LAMBDA_NAME=clinic-service-lambda
 CLINIC_SERVICE_DATABASE_NAME=pets-local-clinics
 APPLICANT_SERVICE_LAMBDA_NAME=applicant-service-lambda
 APPLICANT_SERVICE_DATABASE_NAME=pets-local-applicants
+APPLICATION_SERVICE_LAMBDA_NAME=application-service-lambda
+APPLICATION_SERVICE_DATABASE_NAME=pets-local-application
 API_GATEWAY_STAGE=api
 API_GATEWAY_NAME=services
 APP_DOMAIN=http://localhost:3000
