TBBETA-623: Created business logic for creating new applications, saving the travel information, search applications by id and passport details

--- a/configs/.env
+++ b/configs/.env
@@ -12,3 +12,4 @@ APPLICATION_SERVICE_DATABASE_NAME=pets-local-application
 API_GATEWAY_STAGE=api
 API_GATEWAY_NAME=services
 APP_DOMAIN=http://localhost:3000
+APPLICANT_SERVICE_DB_PASSPORT_DETAILS_INDEX=passport_details_index
