TBBETA-623: Added missing bucket config

--- a/configs/.env.test
+++ b/configs/.env.test
@@ -7,4 +7,5 @@ APPLICANT_SERVICE_LAMBDA_BUCKET=aw-pets-euw-qat-s3-applicantservicelambda
 APPLICANT_SERVICE_DATABASE_NAME=applicant-details
 APPLICATION_SERVICE_LAMBDA_NAME=application-service-lambda
 APPLICATION_SERVICE_DATABASE_NAME=application-details
+APPLICATION_SERVICE_LAMBDA_BUCKET=aw-pets-euw-qat-s3-applicationservicelambda
 API_GATEWAY_STAGE=api
