TBBETA-623: Added variable for Passport lookup GSI

--- a/configs/.env.dev
+++ b/configs/.env.dev
@@ -5,6 +5,7 @@ CLINIC_SERVICE_DATABASE_NAME=pets-clinics
 APPLICANT_SERVICE_LAMBDA_NAME=applicant-service-lambda
 APPLICANT_SERVICE_LAMBDA_BUCKET=aw-pets-euw-dev-s3-applicantservicelambda
 APPLICANT_SERVICE_DATABASE_NAME=applicant-details
+PASSPORT_ID_INDEX=applicant-db-passport-index
 APPLICATION_SERVICE_LAMBDA_NAME=application-service-lambda
 APPLICATION_SERVICE_DATABASE_NAME=application-details
 APPLICATION_SERVICE_LAMBDA_BUCKET=aw-pets-euw-dev-s3-applicationservicelambda
