--- a/configs/.env
+++ b/configs/.env
@@ -7,6 +7,7 @@ CLINIC_SERVICE_LAMBDA_NAME=clinic-service-lambda
 CLINIC_SERVICE_DATABASE_NAME=pets-local-clinics
 APPLICANT_SERVICE_LAMBDA_NAME=applicant-service-lambda
 APPLICANT_SERVICE_DATABASE_NAME=pets-local-applicants
+PASSPORT_ID_INDEX=applicant-db-passport-index
 APPLICATION_SERVICE_LAMBDA_NAME=application-service-lambda
 APPLICATION_SERVICE_DATABASE_NAME=pets-local-application
 API_GATEWAY_STAGE=api
