--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
     "cSpell.diagnosticLevel": "Hint",
     "editor.formatOnSave": true,
-    // "editor.codeActionsOnSave": {
-    //     "source.fixAll.eslint": "explicit"
-    // },
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": "explicit"
+    },
     "[typescript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
