--- a/.github/workflows/app-deploy.yaml
+++ b/.github/workflows/app-deploy.yaml
@@ -13,6 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
 
+    env:
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      APP_DOMAIN: ${{ vars.APP_DOMAIN }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -39,14 +43,9 @@ jobs:
           role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_UI_ROLE_NAME }}"
           role-session-name: PETS-UI-Deploy
 
-      - name: Get API Gateway Spec
-        run: |
-          aws apigateway get-export \
-            --rest-api-id ${{ vars.API_GATEWAY_ID }} \
-            --stage-name ${{ env.API_GATEWAY_STAGE }} \
-            --export-type oas30 \
-            --region eu-west-2 \
-            ./pets-core-services/openapi-docs.json
+      - name: Generate Swagger spec
+        run: pnpm generate:swagger-doc
+        working-directory: pets-core-services
 
       - name: Build application
         run: pnpm run build
