--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "husky": "^9.1.7",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
-    "typescript": "^5.7.3",
+    "typescript": "~5.6.2",
     "typescript-eslint": "^8.13.0",
     "vitest": "^2.1.9"
   },
