--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -10,6 +10,9 @@
     "@middy/http-router": "^6.0.0",
     "aws-xray-sdk": "^3.10.1",
     "esbuild": "^0.25.0",
+    "pino": "^9.6.0",
+    "pino-lambda": "^4.4.1",
+    "pino-pretty": "^13.0.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -23,6 +26,8 @@
   },
   "scripts": {
     "generate:swagger-doc": "pnpm tsx src/swagger-generator/index.ts",
-    "lint": "eslint ."
+    "preload:db": "pnpm tsx src/test/seed-data.ts seed",
+    "lint": "eslint --quiet .",
+    "test": "vitest run --coverage"
   }
 }
