--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -1,5 +1,10 @@
 name: Pets Core Services Deployment
 
+permissions:
+  id-token: write
+  contents: read
+  pull-requests: write
+
 on:
   workflow_call:
     inputs:
@@ -59,12 +64,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          mask-aws-account-id: true
           aws-region: "eu-west-2"
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_CORE_SERVICES_ROLE_NAME }}"
-          role-session-name: PETS-Core-Services-Deploy
+          role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE_NAME }}"
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -90,7 +91,7 @@ jobs:
         run: zip -r -j $ZIP_FILE $BUILD_FOLDER/*
         working-directory: pets-core-services
 
-      - name: Upload Spec to S3 # Ensures Platforms deployement always deploy the latest changes in this repo.
+      - name: Upload Spec to S3 # Ensures IAC deployments always deploy the latest changes in this repo.
         run: aws s3 cp $ZIP_FILE s3://${{ matrix.lambda.s3Bucket }} --sse aws:kms --sse-kms-key-id ${{ vars.SSE_KEY_ID }}
         working-directory: pets-core-services
 
