Update test cd workflows from 'test' to 'qat'

--- a/.github/workflows/app-deploy-test.yaml
+++ b/.github/workflows/app-deploy-test.yaml
@@ -12,5 +12,5 @@ jobs:
   pets-ui:
     uses: ./.github/workflows/app-deploy.yaml
     with:
-      environment: "test"
+      environment: "qat"
     secrets: inherit
