--- a/.github/workflows/core-services-deploy-test.yaml
+++ b/.github/workflows/core-services-deploy-test.yaml
@@ -14,5 +14,5 @@ jobs:
   deploy:
     uses: ./.github/workflows/core-services-deploy.yaml
     with:
-      environment: "test"
+      environment: "qat"
     secrets: inherit
