--- a/configs/.env.qat
+++ b/configs/.env.qat
@@ -1,4 +1,4 @@
-ENVIRONMENT=test
+ENVIRONMENT=qat
 CLINIC_SERVICE_LAMBDA_NAME=clinic-service-lambda
 CLINIC_SERVICE_LAMBDA_BUCKET=aw-pets-euw-qat-s3-clinicservicelambda
 CLINIC_SERVICE_DATABASE_NAME=pets-clinics
