Update config file name

--- a/configs/.env.pre
+++ b/configs/.env.pre
@@ -1,4 +1,4 @@
-ENVIRONMENT=preprod
+ENVIRONMENT=pre
 CLINIC_SERVICE_LAMBDA_NAME=clinic-service-lambda
 CLINIC_SERVICE_LAMBDA_BUCKET=aw-pets-euw-preprod-s3-clinicservicelambda
 CLINIC_SERVICE_DATABASE_NAME=pets-clinics
