TBBETA-525: Update CD pipelines to use OIDC role (#346)
* Update ui cd to use oicd role

* Add pull-request write permission to ui cd

* Update core services cd to use oicd role

* Update test cd workflows from 'test' to 'qat'

* Update config file name

* Fix 2nd configure creds step in core services cd

* Update preprod cd workflows from 'preprod' to 'pre'

* Update config file name

--- a/configs/.env.pre
+++ b/configs/.env.pre
@@ -1,8 +1,8 @@
-ENVIRONMENT=test
+ENVIRONMENT=pre
 CLINIC_SERVICE_LAMBDA_NAME=clinic-service-lambda
-CLINIC_SERVICE_LAMBDA_BUCKET=aw-pets-euw-qat-s3-clinicservicelambda
+CLINIC_SERVICE_LAMBDA_BUCKET=aw-pets-euw-preprod-s3-clinicservicelambda
 CLINIC_SERVICE_DATABASE_NAME=pets-clinics
 APPLICANT_SERVICE_LAMBDA_NAME=applicant-service-lambda
-APPLICANT_SERVICE_LAMBDA_BUCKET=aw-pets-euw-qat-s3-applicantservicelambda
+APPLICANT_SERVICE_LAMBDA_BUCKET=aw-pets-euw-preprod-s3-applicantservicelambda
 APPLICANT_SERVICE_DATABASE_NAME=applicant-details
 API_GATEWAY_STAGE=api
