TBBETA-623: Travel Information and Medical screening (#339)
* TBBETA-296: Added root eslint to lint all packages, also started central package for all core services

* TBBETA=296: Centralised printwidth for all

* TBBETA-296: Created intermdediate package folder for new backend structure

* TBBETA-296: Centralised node_modules commenting out

* TBBETA-296: Resolve linting errors with UI and cypress

* TBBETA-296: Delete redundant config

* TBBETA-296: Added linting for cypress and UI

* TBBETA-296: Added needed central dependencies

* TBBETA-296: Moved common packages to root package.json

* TBBETA-296: Sonar cloud initial config

* TBBETA-296: Moved cypress configs to own directory

* TBBETA-296: Added tsconfig for cypress

* TBBETA-296: Tightened up console errors

* TBBETA-296: Added X-ray for tracing

* TBBETA-296: Renamed core-services to a more permanent location

* TBBETA-296: Creating API docs for hello world lambdas

* TBBETA-296: Removing redundant packages

* TBBETA-296: Automate param from path
TBBETA-296: Added lambda extension to api gateway
TBBETA-296: Added hello world lambda for creating clinics

* TBBETA-296: Created lambda for the applicant service and registered its endpoint
TBBETA-296: Group Endpoints based on service
TBBETA-296: Added documentation for headers

* TBBETA-296: Updated deployment pipeline to use esbuild to build and deploying zip files directly

* TBBETA-296: Pipeline fix

* TBBETA-296: Fixing broken pipeline

* TBBETA-296: Resolving broken pipeline

* TBBETA-296: Removing spurious error with vsocde

* TBBETA-296: Creating folder correctly

* TBBETA-296: Fixing wrong path names

* TBBETA-296: Skipping out config management

* TBBETA-296: Resolving build problem

* TBBETA-296: Use correct var name

* TBBETA-296: Accounting for pnpm poor handling of cli arguments

* TBBETA-296: Resolving wrong names

* TBBETA-296: Resolving another fix

* TBBETA-296: Fixing spotted 

--- a/configs/.env
+++ b/configs/.env
@@ -7,6 +7,9 @@ CLINIC_SERVICE_LAMBDA_NAME=clinic-service-lambda
 CLINIC_SERVICE_DATABASE_NAME=pets-local-clinics
 APPLICANT_SERVICE_LAMBDA_NAME=applicant-service-lambda
 APPLICANT_SERVICE_DATABASE_NAME=pets-local-applicants
+PASSPORT_ID_INDEX=applicant-db-passport-index
+APPLICATION_SERVICE_LAMBDA_NAME=application-service-lambda
+APPLICATION_SERVICE_DATABASE_NAME=pets-local-application
 API_GATEWAY_STAGE=api
 API_GATEWAY_NAME=services
 APP_DOMAIN=http://localhost:3000
