--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -1,5 +1,7 @@
 ENVIRONMENT=ENVIRONMENT
 APPLICANT_SERVICE_DATABASE_NAME=test-applicant-details
+APPLICATION_SERVICE_DATABASE_NAME=test-application-details
+PASSPORT_ID_INDEX=applicant-db-passport-index
 AWS_ENDPOINT_URL=http://127.0.0.1:4566
 AWS_REGION=eu-west-2
 AWS_ACCESS_KEY_ID=AccessKeyId
