--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -36,7 +36,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "@vitest/coverage-v8": "2.1.8",
+    "@vitest/coverage-v8": "^2.1.9",
     "cypress": "^13.15.2",
     "cypress-mochawesome-reporter": "^3.8.2",
     "eslint-plugin-cypress": "^4.1.0",
