TBBETA-63: Adding needed configs for MSAL

--- a/configs/.env
+++ b/configs/.env
@@ -13,3 +13,6 @@ APPLICATION_SERVICE_DATABASE_NAME=pets-local-application
 API_GATEWAY_STAGE=api
 API_GATEWAY_NAME=services
 APP_DOMAIN=http://localhost:3000
+VITE_MSAL_CLIENT_ID=a85acc7b-c64e-452f-bd6b-29ff386751d9
+VITE_MSAL_TENANT_ID=f52ae62b-2ff7-4104-b90f-48cdc7454bfb
+VITE_AUTH_ENDPOINT_URI=https://petsb2cdev.ciamlogin.com
