--- a/configs/.env.pre
+++ b/configs/.env.pre
@@ -10,3 +10,6 @@ APPLICATION_SERVICE_LAMBDA_NAME=application-service-lambda
 APPLICATION_SERVICE_DATABASE_NAME=application-details
 APPLICATION_SERVICE_LAMBDA_BUCKET=aw-pets-euw-preprod-s3-applicationservicelambda
 API_GATEWAY_STAGE=api
+VITE_MSAL_CLIENT_ID=a85acc7b-c64e-452f-bd6b-29ff386751d9
+VITE_MSAL_TENANT_ID=f52ae62b-2ff7-4104-b90f-48cdc7454bfb
+VITE_AUTH_ENDPOINT_URI=https://petsb2cdev.ciamlogin.com
