--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -10,3 +10,6 @@ AWS_DEFAULT_REGION=eu-west-2
 AWS_ACCOUNT_ID=000000000000
 LOG_LEVEL=fatal # fatal | error | debug | info
 TZ = 'UTC'
+VITE_MSAL_CLIENT_ID=TEST_CLIENT_ID
+VITE_MSAL_TENANT_ID=TEST_TENANT_ID
+VITE_AUTH_ENDPOINT_URI=TEST_ENDPOINT
