--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "preinstall": "npx only-allow pnpm",
     "security-checks": "git secrets --scan",
     "prepare": "husky",
-    "start": "node start.mjs"
+    "start": "node start.mjs",
+    "start:ui": "pnpm --filter pets-ui dev"
   },
   "main": "index.js",
   "repository": "git@github.com:UKHSA-Internal/pre-entry-tb-screening-app.git",
