--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --quiet .",
     "preview": "vite preview",
     "cypress": "cypress open",
-    "test": "vitest run --coverage",
+    "test": "vitest run",
+    "test-coverage": "vitest run --coverage",
     "cypress:open": "cypress open -C cypress/cypress.config.mjs"
   },
   "dependencies": {
