--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "@types/swagger-ui-react": "^5.18.0",
+    "axios": "^1.7.9",
     "govuk-frontend": "^5.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
