TBBETA-312: Readded authoriser config

--- a/configs/.env
+++ b/configs/.env
@@ -10,6 +10,7 @@ APPLICANT_SERVICE_DATABASE_NAME=pets-local-applicants
 PASSPORT_ID_INDEX=applicant-db-passport-index
 APPLICATION_SERVICE_LAMBDA_NAME=application-service-lambda
 APPLICATION_SERVICE_DATABASE_NAME=pets-local-application
+AUTHORISER_LAMBDA_NAME=api-gateway-authoriser
 API_GATEWAY_STAGE=api
 API_GATEWAY_NAME=services
 APP_DOMAIN=http://localhost:3000
