--- a/configs/.env.dev
+++ b/configs/.env.dev
@@ -9,4 +9,6 @@ PASSPORT_ID_INDEX=applicant-db-passport-index
 APPLICATION_SERVICE_LAMBDA_NAME=application-service-lambda
 APPLICATION_SERVICE_DATABASE_NAME=application-details
 APPLICATION_SERVICE_LAMBDA_BUCKET=aw-pets-euw-dev-s3-applicationservicelambda
+AUTHORISER_LAMBDA_NAME=api-gateway-authoriser
+AUTHORISER_LAMBDA_BUCKET=aw-pets-euw-dev-s3-lambdaauthoriser
 API_GATEWAY_STAGE=api
