--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.3.0",
     "@aws-sdk/client-dynamodb": "^3.585.0",
+    "@aws-sdk/client-lambda": "^3.750.0",
     "@aws-sdk/lib-dynamodb": "^3.585.0",
     "@middy/core": "^6.0.0",
     "@middy/http-router": "^6.0.0",
