--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -17,6 +17,9 @@ jobs:
     name: Load deployment config for Core Services Lambda
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
+    env:
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      API_GATEWAY_ID: ${{ vars.API_GATEWAY_ID }}
 
     outputs:
       config: ${{ steps.deployment-config.outputs.deploy_config }}
@@ -54,7 +57,6 @@ jobs:
     env:
       BUILD_FOLDER: ".build"
       ZIP_FILE: "deployment_package.zip"
-      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
 
     strategy:
       matrix:
@@ -106,7 +108,6 @@ jobs:
     needs: deploy-lambdas
 
     env:
-      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       SPEC_FILE: swagger.json
       APP_DOMAIN: ${{ vars.APP_DOMAIN }}
 
@@ -137,7 +138,7 @@ jobs:
           aws-region: "eu-west-2"
           role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE_NAME }}"
 
-      - name: Deploy Spec to API Gateway
+      - name: Deploy Spec to API Gateway # TODO: Tell Oghosa about this, passrole thingy, also about cloudfront,
         run: aws apigateway put-rest-api --rest-api-id ${{ vars.API_GATEWAY_ID }} --mode overwrite --body fileb://$SPEC_FILE
         working-directory: pets-core-services
 
