--- a/configs/.env
+++ b/configs/.env
@@ -12,5 +12,5 @@ APPLICATION_SERVICE_LAMBDA_NAME=application-service-lambda
 APPLICATION_SERVICE_DATABASE_NAME=pets-local-application
 AUTHORISER_LAMBDA_NAME=api-gateway-authoriser
 API_GATEWAY_STAGE=api
-API_GATEWAY_NAME=services
+API_GATEWAY_ID=services
 APP_DOMAIN=http://localhost:3000
