TBBETA-512: Added needed config

--- a/configs/.env.dev
+++ b/configs/.env.dev
@@ -9,4 +9,8 @@ PASSPORT_ID_INDEX=applicant-db-passport-index
 APPLICATION_SERVICE_LAMBDA_NAME=application-service-lambda
 APPLICATION_SERVICE_DATABASE_NAME=application-details
 APPLICATION_SERVICE_LAMBDA_BUCKET=aw-pets-euw-dev-s3-applicationservicelambda
+QUARANTINE_LAMBDA_NAME=image-service-lambda
+QUARANTINE_LAMBDA_BUCKET=aw-pets-euw-dev-s3-imageservice
+QUARANTINE_BUCKET=aw-pets-euw-dev-s3-imageservice-quarantine
+DICOM_IMAGE_BUCKET=testing-malware-bucket
 API_GATEWAY_STAGE=api
