--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -10,3 +10,5 @@ AWS_DEFAULT_REGION=eu-west-2
 AWS_ACCOUNT_ID=000000000000
 LOG_LEVEL=fatal # fatal | error | debug | info
 TZ = 'UTC'
+QUARANTINE_BUCKET=QUARANTINE_BUCKET
+DICOM_IMAGE_BUCKET=DICOM_IMAGE_BUCKET
