--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,14 +3,13 @@ name: Pets CI
 on:
   pull_request:
     branches:
-    - main
+      - main
 
   workflow_dispatch:
 
 concurrency:
   group: ci-${{ github.ref_name }}
   cancel-in-progress: true
-
 
 jobs:
   linting:
@@ -68,6 +67,24 @@ jobs:
     strategy:
       matrix:
         browser: [chrome, firefox, edge]
+    env:
+      USER_1_EMAIL: ${{ secrets.USER_1_EMAIL }}
+      USER_1_PASSWORD: ${{ secrets.USER_1_PASSWORD }}
+
+      USER_2_EMAIL: ${{ secrets.USER_2_EMAIL }}
+      USER_2_PASSWORD: ${{ secrets.USER_2_PASSWORD }}
+
+      USER_3_EMAIL: ${{ secrets.USER_3_EMAIL }}
+      USER_3_PASSWORD: ${{ secrets.USER_3_PASSWORD }}
+
+      USER_4_EMAIL: ${{ secrets.USER_4_EMAIL }}
+      USER_4_PASSWORD: ${{ secrets.USER_4_PASSWORD }}
+
+      USER_5_EMAIL: ${{ secrets.USER_5_EMAIL }}
+      USER_5_PASSWORD: ${{ secrets.USER_5_PASSWORD }}
+
+      USER_6_EMAIL: ${{ secrets.USER_6_EMAIL }}
+      USER_6_PASSWORD: ${{ secrets.USER_6_PASSWORD }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
