--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -39,6 +39,7 @@
     "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "2.1.8",
+    "axios-mock-adapter": "^2.1.0",
     "cypress": "^14.0.3",
     "cypress-mochawesome-reporter": "^3.8.2",
     "eslint-plugin-cypress": "^4.1.0",
