--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -127,7 +127,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           install: false
-          working-directory: pets-ui/cypress
+          working-directory: pets-ui
           build: pnpm run build
           start: pnpm run dev
           browser: ${{ matrix.browser }}
