--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,6 +62,7 @@ jobs:
           path: pets-ui/coverage/
 
   cypress-run:
+    if: false # Skipp End to End Tests temporarily
     name: Run cypress tests
     runs-on: ubuntu-latest
     strategy:
