--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -9,6 +9,7 @@
     "@aws-sdk/lib-dynamodb": "^3.585.0",
     "@middy/core": "^6.0.0",
     "@middy/http-router": "^6.0.0",
+    "aws-jwt-verify": "^5.0.0",
     "aws-xray-sdk": "^3.10.1",
     "esbuild": "^0.25.0",
     "pino": "^9.6.0",
