TBBETA-312: Added integration tests for Authoriser

--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -9,8 +9,9 @@ AWS_ACCESS_KEY_ID=AccessKeyId
 AWS_SECRET_ACCESS_KEY=SecretAccessKey
 AWS_DEFAULT_REGION=eu-west-2
 AWS_ACCOUNT_ID=000000000000
-LOG_LEVEL=fatal # fatal | error | debug | info
+API_GATEWAY_ID=TEST_API_GATEWAY_ID
 
+LOG_LEVEL=fatal # fatal | error | debug | info
 TZ = 'UTC'
 VITE_MSAL_CLIENT_ID=TEST_CLIENT_ID
 VITE_MSAL_TENANT_ID=TEST_TENANT_ID
