--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ Temporary Items
 # env
 .env.local
 # Cypress environment variables
-cypress.env.json
+.env.local.secrets
 
 # Tests
 pets.code-workspace
