--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -142,7 +142,7 @@ jobs:
           aws-region: "eu-west-2"
           role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE_NAME }}"
 
-      - name: Deploy Spec to API Gateway # TODO: Tell Oghosa about this, passrole thingy, also about cloudfront,
+      - name: Deploy Spec to API Gateway
         run: aws apigateway put-rest-api --rest-api-id ${{ vars.API_GATEWAY_ID }} --mode overwrite --body fileb://$SPEC_FILE
         working-directory: pets-core-services
 
