--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -18,6 +18,7 @@
     "@azure/msal-react": "^3.0.4",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/swagger-ui-react": "^5.18.0",
+    "axios": "^1.7.9",
     "govuk-frontend": "^5.7.1",
     "msal-react-tester": "^0.3.1",
     "react": "^18.3.1",
@@ -41,6 +42,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "axios-mock-adapter": "^2.1.0",
     "@vitest/coverage-v8": "^2.1.9",
     "cypress": "^14.0.3",
     "cypress-mochawesome-reporter": "^3.8.2",
