TBBETA-312: Inject authentication token to all api request

--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -16,3 +16,4 @@ TZ = 'UTC'
 VITE_MSAL_CLIENT_ID=TEST_CLIENT_ID
 VITE_MSAL_TENANT_ID=TEST_TENANT_ID
 VITE_AUTH_ENDPOINT_URI=TEST_ENDPOINT
+VITE_AZURE_SKIP_TOKEN_ACQUISITION=true
