TBBETA-312: Authorization Lambda (#354)
* TBBETA-312: Readded authoriser config

* TBBETA-312: Added lambda client to simulate calling authoriser call

* TBBETA-312: Created lambda authoriser logic

* TBBETA-312: Added lambda authoriser check to swagger config

* TBBETA-312: Simulated authorization locally

* TBBETA-312: Resolve broken tests

* TBETA-312: Attempting to fix werid error

* TBBETA-312: Generated authoriser policy based on roles defined in Azure

* TBBETA-312: Added request context

* TBBETA-312: Resolve missing configs

* TBBETA-312: Testing clinics read permission

* TBBETA-312: Reversing testing changes

* TBBETA-312: Rename file to reflect content

* TBBETA-312: Verifying clinic id for all endpoints

* TBBETA-312: Added TODO

* TBBETA-312:Add dependencies for verifying jwt tokens

* TBBETA-312: Replaced hardcoded roles with roles from token

* TBBETA-312: Added logic for acquiring token

* TBBETA-312: Refactored auth logic to existing directories

* TBBETA-312: Resolving broken tests for backend

* TBBETA-312: Resolve bundle error

* TBBETA-312: Additional logs

* TBBETA-312: Added integration tests for Authoriser

* TBBETA-312: Resolve broken tests

* TBBETA-312: Made global import of msal client

* TBBETA-312: Added tests for acquiring token

* TBBETA-312: Remove exclusions

* TBBETA-312: Adding test coverage inclusion

* TBBETA-312: Turn off Redux tools for prod

* TBBETA-312: Added tests for auth config

* TBBETA-312: Added tests for various bit of logic

* TBBETA-312: Adding test for clinic ID verification

* TBBETA-312: Added one last test

* TBBETA-312: Resolve broken end to end tests

* TBBETA-312: Re-added E2E test

* TBBETA-312: Resolve broken renovate config

* TBBETA-312: Updated readme with new changes

* TBBETA-312: Resolve linting error

* TBBETA-312: Resolve linting error

* TBBETA-312: Centralised scripts for local automations

* TBBETA-312: Properly assert string envs

* TBBETA-312: Automated pulling local environment secrets from 

--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -17,6 +17,9 @@ jobs:
     name: Load deployment config for Core Services Lambda
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
+    env:
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      API_GATEWAY_ID: ${{ vars.API_GATEWAY_ID }}
 
     outputs:
       config: ${{ steps.deployment-config.outputs.deploy_config }}
@@ -55,6 +58,7 @@ jobs:
       BUILD_FOLDER: ".build"
       ZIP_FILE: "deployment_package.zip"
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      API_GATEWAY_ID: ${{ vars.API_GATEWAY_ID }}
 
     strategy:
       matrix:
@@ -106,9 +110,10 @@ jobs:
     needs: deploy-lambdas
 
     env:
-      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       SPEC_FILE: swagger.json
       APP_DOMAIN: ${{ vars.APP_DOMAIN }}
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      API_GATEWAY_ID: ${{ vars.API_GATEWAY_ID }}
 
     steps:
       - name: Checkout code
