--- a/configs/.env
+++ b/configs/.env
@@ -10,8 +10,9 @@ APPLICANT_SERVICE_DATABASE_NAME=pets-local-applicants
 PASSPORT_ID_INDEX=applicant-db-passport-index
 APPLICATION_SERVICE_LAMBDA_NAME=application-service-lambda
 APPLICATION_SERVICE_DATABASE_NAME=pets-local-application
+AUTHORISER_LAMBDA_NAME=api-gateway-authoriser
 API_GATEWAY_STAGE=api
-API_GATEWAY_NAME=services
+API_GATEWAY_ID=services
 APP_DOMAIN=http://localhost:3000
 VITE_MSAL_CLIENT_ID=9ea33caf-78a7-4344-bb43-930ac6d9c276
 VITE_MSAL_TENANT_ID=f52ae62b-2ff7-4104-b90f-48cdc7454bfb
