--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -2,14 +2,18 @@ ENVIRONMENT=ENVIRONMENT
 APPLICANT_SERVICE_DATABASE_NAME=test-applicant-details
 APPLICATION_SERVICE_DATABASE_NAME=test-application-details
 PASSPORT_ID_INDEX=applicant-db-passport-index
+AUTHORISER_LAMBDA_NAME=test-lambda-name
 AWS_ENDPOINT_URL=http://127.0.0.1:4566
 AWS_REGION=eu-west-2
 AWS_ACCESS_KEY_ID=AccessKeyId
 AWS_SECRET_ACCESS_KEY=SecretAccessKey
 AWS_DEFAULT_REGION=eu-west-2
 AWS_ACCOUNT_ID=000000000000
+API_GATEWAY_ID=TEST_API_GATEWAY_ID
+
 LOG_LEVEL=fatal # fatal | error | debug | info
 TZ = 'UTC'
 VITE_MSAL_CLIENT_ID=TEST_CLIENT_ID
 VITE_MSAL_TENANT_ID=TEST_TENANT_ID
 VITE_AUTH_ENDPOINT_URI=TEST_ENDPOINT
+VITE_AZURE_SKIP_TOKEN_ACQUISITION=true
