TBBETA-512: Migrate kms key to github secrets

--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -12,3 +12,4 @@ LOG_LEVEL=fatal # fatal | error | debug | info
 TZ = 'UTC'
 QUARANTINE_BUCKET=QUARANTINE_BUCKET
 DICOM_IMAGE_BUCKET=DICOM_IMAGE_BUCKET
+S3_SSE_KMS_KEY_ID=S3_SSE_KMS_KEY_ID
