--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -55,6 +55,7 @@ jobs:
       BUILD_FOLDER: ".build"
       ZIP_FILE: "deployment_package.zip"
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      S3_SSE_KMS_KEY_ID: ${{ secrets.S3_SSE_KMS_KEY_ID }}
 
     strategy:
       matrix:
