--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -6,7 +6,9 @@
     "@asteasolutions/zod-to-openapi": "^7.3.0",
     "@aws-sdk/client-dynamodb": "^3.758.0",
     "@aws-sdk/client-lambda": "^3.758.0",
+    "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/lib-dynamodb": "^3.758.0",
+    "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@middy/core": "^6.0.0",
     "@middy/http-router": "^6.0.0",
     "aws-jwt-verify": "^5.0.0",
