TBBETA-506: Added needed configs

--- a/configs/.env
+++ b/configs/.env
@@ -11,6 +11,7 @@ PASSPORT_ID_INDEX=applicant-db-passport-index
 APPLICATION_SERVICE_LAMBDA_NAME=application-service-lambda
 APPLICATION_SERVICE_DATABASE_NAME=pets-local-application
 AUTHORISER_LAMBDA_NAME=api-gateway-authoriser
+IMAGE_BUCKET=aw-pets-euw-local-s3-imageservice
 API_GATEWAY_STAGE=api
 API_GATEWAY_ID=services
 APP_DOMAIN=http://localhost:3000
