--- a/configs/.env.pre
+++ b/configs/.env.pre
@@ -11,6 +11,7 @@ APPLICATION_SERVICE_DATABASE_NAME=application-details
 APPLICATION_SERVICE_LAMBDA_BUCKET=aw-pets-euw-preprod-s3-applicationservicelambda
 AUTHORISER_LAMBDA_NAME=api-gateway-authoriser
 AUTHORISER_LAMBDA_BUCKET=aw-pets-euw-pre-s3-lambdaauthoriser
+IMAGE_BUCKET=aw-pets-euw-pre-s3-imageservice
 API_GATEWAY_STAGE=api
 VITE_MSAL_CLIENT_ID=9ea33caf-78a7-4344-bb43-930ac6d9c276
 VITE_MSAL_TENANT_ID=f52ae62b-2ff7-4104-b90f-48cdc7454bfb
