--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -17,3 +17,4 @@ VITE_MSAL_CLIENT_ID=TEST_CLIENT_ID
 VITE_MSAL_TENANT_ID=TEST_TENANT_ID
 VITE_AUTH_ENDPOINT_URI=TEST_ENDPOINT
 VITE_AZURE_SKIP_TOKEN_ACQUISITION=true
+IMAGE_BUCKET=IMAGE_BUCKET
