--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@types/swagger-ui-react": "^5.18.0",
     "axios": "^1.7.9",
+    "crc-32": "^1.2.2",
     "govuk-frontend": "^5.7.1",
     "msal-react-tester": "^0.3.1",
     "react": "^18.3.1",
@@ -42,8 +43,8 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "axios-mock-adapter": "^2.1.0",
     "@vitest/coverage-v8": "^2.1.9",
+    "axios-mock-adapter": "^2.1.0",
     "cypress": "^14.0.3",
     "cypress-mochawesome-reporter": "^3.8.2",
     "eslint-plugin-cypress": "^4.1.0",
