NO-JIRA: Sleeping for only when needed

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -113,7 +113,8 @@ jobs:
         working-directory: pets-ui
 
       - name: Start Local Environment
-        run: pnpm start
+        run: |
+          pnpm start & sleep 120
 
       - name: Cypress run tests
         uses: cypress-io/github-action@v6
