--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -8,12 +8,10 @@
     "@aws-sdk/client-lambda": "^3.758.0",
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/lib-dynamodb": "^3.758.0",
+    "@aws-sdk/s3-presigned-post": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
-    "@aws-sdk/util-format-url": "^3.734.0",
     "@middy/core": "^6.0.0",
     "@middy/http-router": "^6.0.0",
-    "@smithy/protocol-http": "^5.0.1",
-    "@smithy/url-parser": "^4.0.1",
     "aws-jwt-verify": "^5.0.0",
     "aws-xray-sdk": "^3.10.1",
     "pino": "^9.6.0",
