--- a/configs/.env
+++ b/configs/.env
@@ -18,3 +18,4 @@ APP_DOMAIN=http://localhost:3000
 VITE_MSAL_CLIENT_ID=b00ce845-b38f-43bc-bb44-359c9cd1b819
 VITE_MSAL_TENANT_ID=f52ae62b-2ff7-4104-b90f-48cdc7454bfb
 VITE_AUTH_ENDPOINT_URI=https://petsb2cdev.ciamlogin.com
+SSE_KEY_ID=dummy_key_id
