--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,7 +62,6 @@ jobs:
           path: pets-ui/coverage/
 
   cypress-run:
-    if: false # Skip End to End Tests temporarily
     name: Run cypress tests
     runs-on: ubuntu-latest
     strategy:
@@ -113,13 +112,15 @@ jobs:
           pnpm exec cypress verify
         working-directory: pets-ui
 
+      - name: Start Local Environment
+        run: |
+          pnpm start & sleep 120
+
       - name: Cypress run tests
         uses: cypress-io/github-action@v6
         with:
           install: false
           working-directory: pets-ui
-          build: pnpm run build
-          start: pnpm run dev
           browser: ${{ matrix.browser }}
           config-file: cypress/cypress.config.mjs
 
@@ -129,8 +130,6 @@ jobs:
         with:
           install: false
           working-directory: pets-ui
-          build: pnpm run build
-          start: pnpm run dev
           browser: ${{ matrix.browser }}
           config-file: cypress/cypress.config.mjs
 
