TBBETA-484: Moved app deploy bucket name to hardcoded env variables

--- a/configs/.env.qat
+++ b/configs/.env.qat
@@ -15,3 +15,4 @@ API_GATEWAY_STAGE=api
 VITE_MSAL_CLIENT_ID=b8af26cb-2053-4f08-a4f1-ccb7b97f7038
 VITE_MSAL_TENANT_ID=f52ae62b-2ff7-4104-b90f-48cdc7454bfb
 VITE_AUTH_ENDPOINT_URI=https://petsb2cdev.ciamlogin.com
+APPDEPLOY_BUCKET_NAME=aw-pets-euw-qat-s3-frontendwebapp
