--- a/configs/.env.dev
+++ b/configs/.env.dev
@@ -15,3 +15,4 @@ API_GATEWAY_STAGE=api
 VITE_MSAL_CLIENT_ID=b00ce845-b38f-43bc-bb44-359c9cd1b819
 VITE_MSAL_TENANT_ID=f52ae62b-2ff7-4104-b90f-48cdc7454bfb
 VITE_AUTH_ENDPOINT_URI=https://petsb2cdev.ciamlogin.com
+APPDEPLOY_BUCKET_NAME=aw-pets-euw-dev-s3-frontendwebapp
