--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
             # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
             - DEBUG=${DEBUG:-0}
             - DYNAMODB_IN_MEMORY=1
+            - LAMBDA_DOCKER_FLAGS=-e LOCALSTACK_FILE_WATCHER_STRATEGY=polling
 
         volumes:
             - './.localstack-data:/var/lib/localstack'
