--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prepare": "husky",
     "start": "node scripts/start.mjs",
     "pull:secrets": "node scripts/pull-secrets.mjs",
-    "start:ui": "pnpm --filter pets-ui dev"
+    "start:ui": "pnpm --filter pets-ui dev",
+    "watch:lambda-logs": "node scripts/watch-docker-logs.mjs"
   },
   "main": "index.js",
   "repository": "git@github.com:UKHSA-Internal/pre-entry-tb-screening-app.git",
