--- a/configs/.env.dev
+++ b/configs/.env.dev
@@ -9,6 +9,9 @@ PASSPORT_ID_INDEX=applicant-db-passport-index
 APPLICATION_SERVICE_LAMBDA_NAME=application-service-lambda
 APPLICATION_SERVICE_DATABASE_NAME=application-details
 APPLICATION_SERVICE_LAMBDA_BUCKET=aw-pets-euw-dev-s3-applicationservicelambda
+QUARANTINE_LAMBDA_NAME=image-service-lambda
+QUARANTINE_LAMBDA_BUCKET=aw-pets-euw-dev-s3-imageservicelambda
+QUARANTINE_BUCKET=aw-pets-euw-dev-s3-imageservice-quarantine
 AUTHORISER_LAMBDA_NAME=api-gateway-authoriser
 AUTHORISER_LAMBDA_BUCKET=aw-pets-euw-dev-s3-lambdaauthoriser
 API_GATEWAY_STAGE=api
