TBBETA-506: Reduce callbacks on quarantine service and remove old SSE_KEY ID

--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -15,7 +15,7 @@ LOG_LEVEL=fatal # fatal | error | debug | info
 TZ = 'UTC'
 QUARANTINE_BUCKET=QUARANTINE_BUCKET
 DICOM_IMAGE_BUCKET=DICOM_IMAGE_BUCKET
-S3_SSE_KMS_KEY_ID=S3_SSE_KMS_KEY_ID
+SSE_KEY_ID=SSE_KEY_ID
 VITE_MSAL_CLIENT_ID=TEST_CLIENT_ID
 VITE_MSAL_TENANT_ID=TEST_TENANT_ID
 VITE_AUTH_ENDPOINT_URI=TEST_ENDPOINT
