Feature/tbbeta 506 dicom store (#385)
* TBBETA-506: Moved applicant model to shared as it's required by multiple services

* TBBETA-506: Added S3 client library

* TBBETA-506: Added needed configs

* TBBETA-506: Added logic for generating upload urls

* TBBETA-506: Added local bucket

* TBBETA-506: Implemented sonar scan for main branch also

* TBBETA-506: Fix issues with env

* TBBETA-506: Added check sum

* TBBETA-506: Adding checksum to request body

* TBBETA-506: Generating signature

* TBBETA-506: Fixing missing headers

* TBBETA-506: Switched checksum to sha256

* TBBETA-506: Adding missing header

* TBBETA-506: Resolved the undocumented issues of request headers not needing to be hoisted

* TBBETA-506: Forced changes

* TBBETA-506: Ditching signed put for signed post

* TBBETA-506: Code Cleanup, bugs spotted so far and fixing TODOs

* TBBETA-506: Updated documentation

* TBBETA-506: Added config to needed places

* TBBETA-506: Fix Content type and dummy index

* TBBETA-506: Remove redundant package

* TBBETA-506: Ressolve broken lock file

* TBBETA-506: Added functionality for generating upload urls for S3

* TBBETA-506: Added cors config for local bucket

* TBBETA-506: Resolve missing application ID for searched applicant

* TBBETA-506: Added FE logic for safely uploading files to S3

* TBBETA-506: Migrated file type validation to native and expunged logic serializing files for redux storing

* TBBETA-312: Added setup for Rancher desktop and test data

* TBBETA-506: Resolving build issue

* TBBETA-506: Wrote logic for validating DICOM image upload

* TBBETA-506: Possible exceptions

* TBBETA-506: Resolve linting issue

* TBBETA-506: Resolve linting issues

* TBBETA-506: Posting bucket path correctly

* TBBETA-506: More linting fix

* TBBETA-506: Added test coverage to all frontend changes

* TBBETA-506: Reduce callbacks on quarantine service and remove old SSE_KEY ID

* TBBETA-506: Change API notation

* TBBETA-506: Remove redundant dependencies

* TBBETA-50

--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -58,8 +58,9 @@ jobs:
       BUILD_FOLDER: ".build"
       ZIP_FILE: "deployment_package.zip"
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-      S3_SSE_KMS_KEY_ID: ${{ secrets.S3_SSE_KMS_KEY_ID }}
       API_GATEWAY_ID: ${{ vars.API_GATEWAY_ID }}
+      APP_DOMAIN: ${{ vars.APP_DOMAIN }}
+      SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
 
     strategy:
       matrix:
@@ -115,6 +116,7 @@ jobs:
       APP_DOMAIN: ${{ vars.APP_DOMAIN }}
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       API_GATEWAY_ID: ${{ vars.API_GATEWAY_ID }}
+      SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
 
     steps:
       - name: Checkout code
