--- a/configs/.env
+++ b/configs/.env
@@ -11,9 +11,11 @@ PASSPORT_ID_INDEX=applicant-db-passport-index
 APPLICATION_SERVICE_LAMBDA_NAME=application-service-lambda
 APPLICATION_SERVICE_DATABASE_NAME=pets-local-application
 AUTHORISER_LAMBDA_NAME=api-gateway-authoriser
+IMAGE_BUCKET=aw-pets-euw-local-s3-imageservice
 API_GATEWAY_STAGE=api
 API_GATEWAY_ID=services
 APP_DOMAIN=http://localhost:3000
 VITE_MSAL_CLIENT_ID=b00ce845-b38f-43bc-bb44-359c9cd1b819
 VITE_MSAL_TENANT_ID=f52ae62b-2ff7-4104-b90f-48cdc7454bfb
 VITE_AUTH_ENDPOINT_URI=https://petsb2cdev.ciamlogin.com
+SSE_KEY_ID=dummy_key_id
