--- a/configs/.env.dev
+++ b/configs/.env.dev
@@ -14,6 +14,7 @@ QUARANTINE_LAMBDA_BUCKET=aw-pets-euw-dev-s3-imageservicelambda
 QUARANTINE_BUCKET=aw-pets-euw-dev-s3-imageservice-quarantine
 AUTHORISER_LAMBDA_NAME=api-gateway-authoriser
 AUTHORISER_LAMBDA_BUCKET=aw-pets-euw-dev-s3-lambdaauthoriser
+IMAGE_BUCKET=aw-pets-euw-dev-s3-imageservice
 API_GATEWAY_STAGE=api
 VITE_MSAL_CLIENT_ID=b00ce845-b38f-43bc-bb44-359c9cd1b819
 VITE_MSAL_TENANT_ID=f52ae62b-2ff7-4104-b90f-48cdc7454bfb
