--- a/configs/.env.pre
+++ b/configs/.env.pre
@@ -14,6 +14,7 @@ QUARANTINE_LAMBDA_BUCKET=aw-pets-euw-preprod-s3-imageservicelambda
 QUARANTINE_BUCKET=aw-pets-euw-preprod-s3-imageservice-quarantine
 AUTHORISER_LAMBDA_NAME=api-gateway-authoriser
 AUTHORISER_LAMBDA_BUCKET=aw-pets-euw-preprod-s3-lambdaauthoriser
+IMAGE_BUCKET=aw-pets-euw-preprod-s3-imageservice
 API_GATEWAY_STAGE=api
 VITE_MSAL_CLIENT_ID=29029e55-d4c3-4545-b657-fc0e437df4df
 VITE_MSAL_TENANT_ID=f52ae62b-2ff7-4104-b90f-48cdc7454bfb
