--- a/configs/.env.qat
+++ b/configs/.env.qat
@@ -14,6 +14,7 @@ QUARANTINE_LAMBDA_BUCKET=aw-pets-euw-qat-s3-imageservicelambda
 QUARANTINE_BUCKET=aw-pets-euw-qat-s3-imageservice-quarantine
 AUTHORISER_LAMBDA_NAME=api-gateway-authoriser
 AUTHORISER_LAMBDA_BUCKET=aw-pets-euw-qat-s3-lambdaauthoriser
+IMAGE_BUCKET=aw-pets-euw-qat-s3-imageservice
 API_GATEWAY_STAGE=api
 VITE_MSAL_CLIENT_ID=b8af26cb-2053-4f08-a4f1-ccb7b97f7038
 VITE_MSAL_TENANT_ID=f52ae62b-2ff7-4104-b90f-48cdc7454bfb
