TBBETA-484: Resolve preprod deployment issues

--- a/.github/workflows/core-services-deploy-preprod.yaml
+++ b/.github/workflows/core-services-deploy-preprod.yaml
@@ -14,5 +14,5 @@ jobs:
   deploy:
     uses: ./.github/workflows/core-services-deploy.yaml
     with:
-      environment: "pre"
+      environment: "preprod"
     secrets: inherit
