--- a/.github/workflows/app-deploy-preprod.yaml
+++ b/.github/workflows/app-deploy-preprod.yaml
@@ -12,5 +12,5 @@ jobs:
   pets-ui:
     uses: ./.github/workflows/app-deploy.yaml
     with:
-      environment: "pre"
+      environment: "preprod"
     secrets: inherit
