--- a/.github/workflows/app-deploy.yaml
+++ b/.github/workflows/app-deploy.yaml
@@ -61,7 +61,7 @@ jobs:
       - name: Get Pull Request Number
         id: get_pr
         run: |
-          PR_NUMBER=$(gh pr list --head ${{ github.ref_name }} --state open --json number --jq '.[0].number')
+          PR_NUMBER=$(gh pr list --head '${{ github.ref_name }}' --state open --json number --jq '.[0].number')
           echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_ENV
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
