TBBETA-818: Resolve missing checkout

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,9 @@ jobs:
   validate-branch-name:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Validate branch name
         uses: ./.github/actions/validate-branch-name
         with:
