--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,17 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  validate-branch-name:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Validate branch name
+        uses: ./.github/actions/validate-branch-name
+        with:
+          branch_name: ${{ github.head_ref }}
+
   linting:
     name: Run linting checks
     runs-on: ubuntu-latest
