add tests and improve Clinic class methods
isActiveClinic method uses QueryCommand instead of ScanCommand
which in theory should be faster

--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -1,6 +1,7 @@
 ENVIRONMENT=ENVIRONMENT
 APPLICANT_SERVICE_DATABASE_NAME=test-applicant-details
 APPLICATION_SERVICE_DATABASE_NAME=test-application-details
+CLINIC_SERVICE_DATABASE_NAME=test-clinic-details
 PASSPORT_ID_INDEX=applicant-db-passport-index
 AUTHORISER_LAMBDA_NAME=test-lambda-name
 AWS_ENDPOINT_URL=http://127.0.0.1:4566
@@ -12,7 +13,7 @@ AWS_ACCOUNT_ID=000000000000
 API_GATEWAY_ID=TEST_API_GATEWAY_ID
 
 LOG_LEVEL=fatal # fatal | error | debug | info
-TZ = 'UTC'
+TZ='UTC'
 QUARANTINE_BUCKET=QUARANTINE_BUCKET
 DICOM_IMAGE_BUCKET=DICOM_IMAGE_BUCKET
 S3_SSE_KMS_KEY_ID=S3_SSE_KMS_KEY_ID
