--- a/configs/.env.prod
+++ b/configs/.env.prod
@@ -18,5 +18,5 @@ IMAGE_BUCKET=aw-pets-euw-prod-s3-imageservice
 API_GATEWAY_STAGE=api
 VITE_MSAL_CLIENT_ID=29029e55-d4c3-4545-b657-fc0e437df4df
 VITE_MSAL_TENANT_ID=f52ae62b-2ff7-4104-b90f-48cdc7454bfb
-VITE_AUTH_ENDPOINT_URI=https://petsb2cdev.ciamlogin.com
+VITE_AUTH_ENDPOINT_URI=https://petsprod.onmicrosoft.com
 APPDEPLOY_BUCKET_NAME=aw-pets-euw-prod-s3-frontendwebapp
