TBBETA-80: prod pipelines (#403)
* Remove commented out code in preprod pipelines

* Create prod pipelines

* Fix prod auth link

--- a/.github/workflows/app-deploy-prod.yaml
+++ b/.github/workflows/app-deploy-prod.yaml
@@ -1,4 +1,4 @@
-name: Pets UI Deployment - Preprod
+name: Pets UI Deployment - Prod
 
 on:
   workflow_dispatch:
@@ -7,5 +7,5 @@ jobs:
   pets-ui:
     uses: ./.github/workflows/app-deploy.yaml
     with:
-      environment: "preprod"
+      environment: "prod"
     secrets: inherit
