--- a/.github/workflows/core-services-deploy-prod.yaml
+++ b/.github/workflows/core-services-deploy-prod.yaml
@@ -7,5 +7,5 @@ jobs:
   deploy:
     uses: ./.github/workflows/core-services-deploy.yaml
     with:
-      environment: "preprod"
+      environment: "prod"
     secrets: inherit
