--- a/.github/actions/validate-branch-name/action.yml
+++ b/.github/actions/validate-branch-name/action.yml
@@ -13,7 +13,7 @@ runs:
       shell: bash
       run: |
         BRANCH_NAME="${{ inputs.branch_name }}"
-        PATTERN="^feature/TBBETA-[0-9]+(-[a-z0-9-]+)?$"
+        PATTERN="^(main|release\/.+|feature\/TBBETA-[0-9]+(-[a-z0-9-]+)?)$"
 
         if [[ ! "$BRANCH_NAME" =~ $PATTERN ]]; then
           echo "❌ ERROR: Branch name '$branch_name' does not follow the required convention:"
