--- a/pets-core-services/package.json
+++ b/pets-core-services/package.json
@@ -32,7 +32,7 @@
     "generate:swagger-doc": "pnpm tsx src/swagger-generator/index.ts",
     "preload:db": "pnpm tsx src/test/seed-data.ts seed",
     "lint": "eslint --quiet .",
-    "type-check-core": "tsc --noEmit",
+    "type-check": "tsc --noEmit",
     "test": "vitest run",
     "test-coverage": "vitest run --coverage"
   }
