Consolidate ui & core services pipelines

--- a/.github/workflows/deploy-preprod.yaml
+++ b/.github/workflows/deploy-preprod.yaml
@@ -1,11 +1,11 @@
-name: Pets Core Services Deployment - Preprod
+name: Pets Deployment - Preprod
 
 on:
   workflow_dispatch:
 
 jobs:
   deploy:
-    uses: ./.github/workflows/core-services-deploy.yaml
+    uses: ./.github/workflows/deploy.yaml
     with:
       environment: "preprod"
     secrets: inherit
