--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Pets UI Deployment
+name: Pets Deployment
 
 permissions:
   id-token: write
@@ -13,10 +13,150 @@ on:
         required: true
 
 jobs:
-  build-and-deploy:
-    name: Build and Deploy
+  load-deployment-config:
+    name: Load deployment config for Core Services Lambda
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
+    env:
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      API_GATEWAY_ID: ${{ vars.API_GATEWAY_ID }}
+
+    outputs:
+      config: ${{ steps.deployment-config.outputs.deploy_config }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm i
+
+      - name: Load environment config
+        run: cat configs/.env.${{ inputs.environment }} >> $GITHUB_ENV
+
+      - name: Load Deployment config
+        id: deployment-config
+        run: |
+          deploy_config=$(pnpm tsx deployment-config.ts)
+          echo "deploy_config=$(jq -cj . <<< $deploy_config)" >> $GITHUB_OUTPUT
+        working-directory: pets-core-services
+
+  deploy-lambdas:
+    name: Build, package & deploy lambda
+    runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
+    needs: load-deployment-config
+
+    env:
+      BUILD_FOLDER: ".build"
+      ZIP_FILE: "deployment_package.zip"
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      API_GATEWAY_ID: ${{ vars.API_GATEWAY_ID }}
+      APP_DOMAIN: ${{ vars.APP_DOMAIN }}
+      SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
+
+    strategy:
+      matrix:
+        lambda: ${{ fromJSON(needs.load-deployment-config.outputs.config) }}
+
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: "eu-west-2"
+          role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE_NAME }}"
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm i
+
+      - name: Load environment config
+        run: cat configs/.env.${{ inputs.environment }} >> $GITHUB_ENV
+
+      - name: Build lambda source code
+        run: node esbuild.config.js ${{ matrix.lambda.path }} $BUILD_FOLDER/index.js
+        working-directory: pets-core-services
+
+      - name: Create zip
+        run: zip -r -j $ZIP_FILE $BUILD_FOLDER/*
+        working-directory: pets-core-services
+
+      - name: Upload Spec to S3 # Ensures IAC deployments always deploy the latest changes in this repo.
+        run: aws s3 cp $ZIP_FILE s3://${{ matrix.lambda.s3Bucket }} --sse aws:kms --sse-kms-key-id ${{ vars.SSE_KEY_ID }}
+        working-directory: pets-core-services
+
+      - name: Update lambda code
+        run: aws lambda update-function-code --function-name ${{ matrix.lambda.lambdaName }} --zip-file fileb://$ZIP_FILE
+        working-directory: pets-core-services
+
+  deploy-swagger-spec:
+    name: Generate Swagger spec and deploy to API Gateway
+    runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
+    needs: deploy-lambdas
+
+    env:
+      SPEC_FILE: swagger.json
+      APP_DOMAIN: ${{ vars.APP_DOMAIN }}
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      API_GATEWAY_ID: ${{ vars.API_GATEWAY_ID }}
+      SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm i
+
+      - name: Load environment config
+        run: cat configs/.env.${{ inputs.environment }} >> $GITHUB_ENV
+
+      - name: Generate Swagger spec
+        run: pnpm generate:swagger-doc
+        working-directory: pets-core-services
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: "eu-west-2"
+          role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_DEPLOY_ROLE_NAME }}"
+
+      - name: Deploy Spec to API Gateway
+        run: aws apigateway put-rest-api --rest-api-id ${{ vars.API_GATEWAY_ID }} --mode overwrite --body fileb://$SPEC_FILE
+        working-directory: pets-core-services
+
+      - name: Update API Gateway Stage
+        run: aws apigateway create-deployment --rest-api-id ${{ vars.API_GATEWAY_ID }} --stage-name ${{ env.API_GATEWAY_STAGE }}
+
+  build-and-deploy-ui:
+    name: Build and Deploy UI
+    runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
+    needs: [load-deployment-config, deploy-lambdas, deploy-swagger-spec]
 
     env:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
@@ -58,9 +198,8 @@ jobs:
         working-directory: pets-ui/dist
         run: aws s3 sync . s3://$APPDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id ${{ vars.SSE_KEY_ID }}
 
-
   cypress-run:
-    needs: build-and-deploy
+    needs: build-and-deploy-ui
     name: Run cypress tests
     runs-on: ubuntu-latest
     strategy:
@@ -118,7 +257,7 @@ jobs:
       - name: Cypress run tests
         uses: cypress-io/github-action@v6
         continue-on-error: true
-        id:  initial_attempt
+        id: initial_attempt
         with:
           install: false
           working-directory: pets-ui
@@ -141,7 +280,6 @@ jobs:
         with:
           name: failed-tests-screenshots
           path: pets-ui/cypress/screenshots
-
 
   share-deployment-details:
     needs: cypress-run
