TBBETA-754: Fix more issues withh Cypress

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -206,6 +206,8 @@ jobs:
       matrix:
         browser: [chrome, firefox, edge]
     env:
+      APP_DOMAIN: ${{ vars.APP_DOMAIN }}
+
       USER_1_EMAIL: ${{ secrets.USER_1_EMAIL }}
       USER_1_PASSWORD: ${{ secrets.USER_1_PASSWORD }}
 
