TBBETA-754: Added missign config

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -202,6 +202,8 @@ jobs:
     needs: build-and-deploy-ui
     name: Run cypress tests
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
+
     strategy:
       matrix:
         browser: [chrome, firefox, edge]
