TBBETA-754: Resolve Issues with Deployment Pipelines (#410)
* TBBETA-818: Resolve broken E2E tests

* TBBETA-818: Resolve failing cypress tests

* TBBETA-754: Added cypress test run

* Consolidate ui & core services pipelines

* TBBETA-754: Updated Readme with new deployment flow

* TBBETA-754: Remove redundant action

* TBBETA-754: Added Explicit wait temporarily

* TBBETA-754: Fix more issues withh Cypress

* TBBETA-754: Remove redundant wait

* TBBETA-754: Added missign config

* TBBETA-754: Resolve git error

---------

Co-authored-by: Will Tipper <will.tipper@ukhsa.gov.uk>

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -202,10 +202,14 @@ jobs:
     needs: build-and-deploy-ui
     name: Run cypress tests
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
+
     strategy:
       matrix:
         browser: [chrome, firefox, edge]
     env:
+      APP_DOMAIN: ${{ vars.APP_DOMAIN }}
+
       USER_1_EMAIL: ${{ secrets.USER_1_EMAIL }}
       USER_1_PASSWORD: ${{ secrets.USER_1_PASSWORD }}
 
@@ -288,6 +292,9 @@ jobs:
     environment: ${{ inputs.environment }}
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Get Pull Request Number
         id: get_pr
         run: |
