--- a/configs/.env.prod
+++ b/configs/.env.prod
@@ -18,5 +18,5 @@ IMAGE_BUCKET=aw-pets-euw-prod-s3-imageservice
 API_GATEWAY_STAGE=api
 VITE_MSAL_CLIENT_ID=194a7cd5-ebf3-42cb-b636-8e5790634a4c
 VITE_MSAL_TENANT_ID=f0a97303-895e-4921-bfbd-494bded77646
-VITE_AUTH_ENDPOINT_URI=https://petsprod.onmicrosoft.com
+VITE_AUTH_ENDPOINT_URI=https://petsprod.ciamlogin.com
 APPDEPLOY_BUCKET_NAME=aw-pets-euw-prod-s3-frontendwebapp
