--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -24,6 +24,7 @@
     "msal-react-tester": "^0.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^5.0.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.2",
     "react-redux": "^9.1.2",
