TBBETA-754: Resolve broken logs for unit and integration tests

--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -1,4 +1,4 @@
-ENVIRONMENT=ENVIRONMENT
+ENVIRONMENT=TEST_LOCAL
 APPLICANT_SERVICE_DATABASE_NAME=test-applicant-details
 APPLICATION_SERVICE_DATABASE_NAME=test-application-details
 PASSPORT_ID_INDEX=applicant-db-passport-index
